--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-test-renderer": "^16.12.0"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,7 +57,8 @@
       "!<rootDir>/node_modules/",
       "!<rootDir>/path/to/dir/",
       "!src/index.js",
-      "!src/serviceWorker.js"
+      "!src/serviceWorker.js",
+      "!src/App.js"
     ],
     "coverageThreshold": {
       "global": {
@@ -80,6 +80,10 @@
         "statements": 100
       }
     },
-    "coverageReporters": ["json", "html", "text"]
+    "coverageReporters": [
+      "json",
+      "html",
+      "text"
+    ]
   }
 }
